# rust-gpt-from-scratch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
data/: README.md
docs/: lesson-attention.md
src/: lib.rs  model.rs  tensor.rs  tokenizer.rs  training.rs
src/inference/: mod.rs
src/model/: attention.rs  block.rs  config.rs  gpt.rs  mlp.rs
src/tensor/: mod.rs
src/tokenizer/: dataset.rs  mod.rs  tokenizer.rs
src/training/: mod.rs
tests/: model_tests.rs  tensor_tests.rs  tokenizer_tests.rs  training_tests.rs
