[package]
name = "nano-gpt-rs"
version = "0.1.0"
edition = "2021"
description = "2M-parameter GPT from scratch in pure Rust"
authors = ["Yitzchak-Holtzberg"]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
